# km_num2text

./: README.md  main.py  pipe.py  pyproject.tml  pyproject.toml  requirements.txt
conf/: en2km.yaml
src/km_num2text/: __init__.py  main.py  utils.py
